--- a/Wishcard/mystyle.css
+++ b/Wishcard/mystyle.css
@@ -50,6 +50,7 @@ img {
 
 	display: block;
 	width: 100%;
+	height: 0;
 	opacity: 0.0;
 	margin: auto;
 	animation-name: thank_you;
@@ -121,6 +122,7 @@ img {
 	to {
     	transform:scale(1,1);
     	opacity: 1.0;
+    	height: 100%;
 	}
 }
 
